# ScaleCap

./: README.md  example.py  pyproject.toml  setup.sh
eval/mmstar/answers/: ScaleCap-VLM-7B-LLM-72B.jsonl
eval/mmstar/results/: ScaleCap-VLM-7B-LLM-72B_gpt-4-turbo-grade-1runs.json
eval/mmvet/: evaluate_7b.sh  evaluator.py
eval/mmvet/answers/: ScaleCap-VLM-7B-LLM-72B.jsonl
eval/mmvet/captions/: ScaleCap-VLM-7B-LLM-72B.jsonl
eval/mmvet/results/: ScaleCap-VLM-7B-LLM-72B.json  ScaleCap-VLM-7B-LLM-72B_gpt-4-turbo-cap-int-score-1runs.csv  ScaleCap-VLM-7B-LLM-72B_gpt-4-turbo-cap-score-1runs.csv  ScaleCap-VLM-7B-LLM-72B_gpt-4-turbo-grade-1runs.json
grocery_file/: initiallize_vlm_3b.ipynb  initiallize_vlm_7b.ipynb
prism_benchmark/: chartqa.py  mmstar.py  mmvet.py  textvqa.py
scripts/: launch_example.sh
scripts/bench_scripts/: launch_mmvet.sh
utils/: prompts.py  scalecap_utils.py
